only swear fealty to those who have been online in the last 30 days

--- a/plugin.yml
+++ b/plugin.yml
@@ -386,6 +386,10 @@ commands:
     description: Edits a race
     usage: /editrace raceid setting value
     aliases: []
+  editalignment:
+    description: Edits an alignment
+    usage: /editalignment alignmentid setting value
+    aliases: []
   editfaction:
     description: Edits a faction
     usage: /editfaction faction setting value
