Paladins can now use /oath && let new players talk in global

--- a/plugin.yml
+++ b/plugin.yml
@@ -555,6 +555,10 @@ commands:
     description: Publish book
     usage: /publishbook
     aliases: []
+  oath:
+    description: Select oath
+    usage: /oath <select>
+    aliases: []
 depend:
 - Vault
 - MythicMobs
