--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: java
-
+deploy:
+  provider: script
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  skip_cleanup: true
+  on:
+    tags: true
