include plugin.yml

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
 	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+<resources>
+<resource>
+<directory>src/</directory>
+<includes>
+<include>plugin.yml</include>
+</includes>
+</resource>
+</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
