--- a/pom.xml
+++ b/pom.xml
@@ -1,149 +1,158 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.solinia</groupId>
-	<artifactId>solinia3-core</artifactId>
-	<version>1.13.2-R0.1-SNAPSHOT</version>
-	<name>solinia3-core</name>
-	<description>The EverQuest like RPG plugin for spigot</description>
-	
-	<build>
-		<sourceDirectory>src</sourceDirectory>
-<resources>
-<resource>
-<directory>src/</directory>
-<includes>
-<include>plugin.yml</include>
-</includes>
-</resource>
-</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<repositories>
-			<repository>
-			<id>1_solinia-releases</id>
-			<url>http://play.fallofanempire.com:8081/nexus/content/repositories/releases/</url>
-            <snapshots>
-            	<enabled>false</enabled>
-            </snapshots>
-            <releases>
-            	<enabled>true</enabled>
-        	</releases>
-		</repository>
-		<repository>
-			<id>2_solinia-snapshots</id>
-			<url>http://play.fallofanempire.com:8081/nexus/content/repositories/snapshots/</url>
-            <snapshots>
-            	<enabled>true</enabled>
-            </snapshots>
-            <releases>
-            	<enabled>false</enabled>
-        	</releases>
-		</repository>
-	
-		<repository>
-            <id>3_dmulloy2-repo</id>
-            <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
-        </repository>
-        <repository>
-            <id>md_5-releases</id>
-            <url>https://repo.md-5.net/content/repositories/releases/</url>
-        </repository>
-        <repository>
-            <id>md_5-snapshots</id>
-            <url>https://repo.md-5.net/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-		</repository>
-		<repository>
-		    <id>elmakers-repo</id>
-		    <url>http://maven.elmakers.com/repository/ </url>
-		</repository>
-		<repository>
-            <id>parallelblock-public</id>
-            <name>ParallelBlock Public Repository</name>
-            <url>https://repo.parallelblock.com/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>mvnrepository</id>
-            <url>http://repo1.maven.org/maven2</url>
-            <snapshots>
-            	<enabled>false</enabled>
-            </snapshots>
-            <releases>
-            	<enabled>true</enabled>
-        	</releases>
-		</repository>
-	</repositories>
-	<distributionManagement>
-        <repository>
-            <id>releases</id>
-            <name>Internal Releases</name>
-            <url>http://portainer1.solinia.com:8081/nexus/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>Internal Releases</name>
-            <url>http://portainer1.solinia.com:8081/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-	<dependencies>
-		<dependency>
-		  <groupId>org.spigotmc</groupId>
-		  <artifactId>spigot</artifactId>
-		  <version>1.13.2-R0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		  <groupId>LibsDisguises</groupId>
-		  <artifactId>LibsDisguises</artifactId>
-		  <version>9.6.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		  <groupId>org.bukkit</groupId>
-		  <artifactId>craftbukkit</artifactId>
-		  <version>1.13.2-R0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		  <groupId>de.slikey</groupId>
-		  <artifactId>EffectLib</artifactId>
-		  <version>6.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.discord4j</groupId>
-		    <artifactId>Discord4J</artifactId>
-		    <version>2.10.1</version>
-		</dependency>
-		<dependency>
-	        <groupId>net.milkbowl.vault</groupId>
-	        <artifactId>Vault</artifactId>
-	        <version>1.7.1</version>
-	    </dependency>
-	    <dependency>
-			<groupId>com.vexsoftware</groupId>
-			<artifactId>nuvotifier-universal</artifactId>
-			<version>2.3.7</version>
-		</dependency>
-        <dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-csv</artifactId>
-		    <version>1.5</version>
-		</dependency>
-		<dependency>
-		  <groupId>org.inventivetalent</groupId>
-		  <artifactId>glowapi</artifactId>
-		  <version>1.4.7-SNAPSHOT</version>
-		</dependency>
-    </dependencies>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.solinia</groupId>
+  <artifactId>solinia3-core</artifactId>
+  <version>1.13.2-R0.1-SNAPSHOT</version>
+  <name>solinia3-core</name>
+  <description>The EverQuest like RPG plugin for spigot</description>
+
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>src/</directory>
+        <includes>
+          <include>plugin.yml</include>
+        </includes>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifestFile>META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <repositories>
+    <repository>
+      <id>1_solinia-releases</id>
+      <url>http://play.fallofanempire.com:8081/nexus/content/repositories/releases/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+    <repository>
+      <id>2_solinia-snapshots</id>
+      <url>http://play.fallofanempire.com:8081/nexus/content/repositories/snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+
+    <repository>
+      <id>3_dmulloy2-repo</id>
+      <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+    </repository>
+    <repository>
+      <id>md_5-releases</id>
+      <url>https://repo.md-5.net/content/repositories/releases/</url>
+    </repository>
+    <repository>
+      <id>md_5-snapshots</id>
+      <url>https://repo.md-5.net/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <id>elmakers-repo</id>
+      <url>http://maven.elmakers.com/repository/ </url>
+    </repository>
+    <repository>
+      <id>parallelblock-public</id>
+      <name>ParallelBlock Public Repository</name>
+      <url>https://repo.parallelblock.com/repository/maven-public/</url>
+    </repository>
+    <repository>
+      <id>mvnrepository</id>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Internal Releases</name>
+      <url>http://portainer1.solinia.com:8081/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Internal Releases</name>
+      <url>http://portainer1.solinia.com:8081/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <dependencies>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot</artifactId>
+      <version>1.13.2-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>LibsDisguises</groupId>
+      <artifactId>LibsDisguises</artifactId>
+      <version>9.6.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bukkit</groupId>
+      <artifactId>craftbukkit</artifactId>
+      <version>1.13.2-R0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>de.slikey</groupId>
+      <artifactId>EffectLib</artifactId>
+      <version>6.2-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.discord4j</groupId>
+      <artifactId>Discord4J</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.milkbowl.vault</groupId>
+      <artifactId>Vault</artifactId>
+      <version>1.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vexsoftware</groupId>
+      <artifactId>nuvotifier-universal</artifactId>
+      <version>2.3.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.inventivetalent</groupId>
+      <artifactId>glowapi</artifactId>
+      <version>1.4.7-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 </project>
