--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -17,6 +17,12 @@ commands:
     aliases:
     - name
     - nick
+  pray:
+    description: Makes a prayer to the gods
+    usage: /pray <prayer>
+    aliases:
+    - prayer
+    - beseech
   today:
     description: Lists todays RP time
     usage: /today
