readd discord join messages

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -106,7 +106,9 @@ commands:
   who:
     description: Lists online player details
     usage: /who
-    aliases: []
+    aliases:
+    - online
+    - list
   editchunk:
     description: Edits a chunk
     usage: /editchunk
