allow content team command access, remove operator requiremnt on all items, add ?flushdiscord command

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -31,6 +31,10 @@ commands:
     description: Lists todays RP time
     usage: /today
     aliases: []
+  flushdiscord:
+    description: Empties discord queue
+    usage: /flushdiscord
+    aliases: []
   hidesongs:
     description: Hides songs
     usage: /hidesongs
