--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
       <version>2.10.1</version>
     </dependency>
     <dependency>
+    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.8.3</version>
+	</dependency>
+    <dependency>
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>Vault</artifactId>
       <version>1.7.1</version>
