--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
   <dependencies>
     <dependency>
       <groupId>org.spigotmc</groupId>
-      <artifactId>spigot</artifactId>
+      <artifactId>spigot-api</artifactId>
       <version>1.13.2-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
