--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,9 +11,9 @@ commands:
     description: Commits Solinia3Core State Data
     usage: /commit
     aliases: []
-  iteminfo:
+  soliteminfo:
     description: Gets item info in main hand
-    usage: /iteminfo
+    usage: /soliteminfo
     aliases: []
   consider:
     description: Considers the faction standing of your target
