--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,6 +11,10 @@ commands:
     description: Commits Solinia3Core State Data
     usage: /commit
     aliases: []
+  removevampirism:
+    description: Removes vampirism from a player
+    usage: /removevampirism mcname
+    aliases: []
   follow:
     description: Follows target
     usage: /follow
