--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -68,6 +68,10 @@ commands:
     description: Lists todays RP time
     usage: /today
     aliases: []
+  flushdiscord:
+    description: Empties discord queue
+    usage: /flushdiscord
+    aliases: []
   hidesongs:
     description: Hides songs
     usage: /hidesongs
@@ -98,6 +102,10 @@ commands:
   mana:
     description: Gets player mana
     usage: /mana
+    aliases: []
+  showdiscord:
+    description: Toggles showing of discord
+    usage: /showdiscord
     aliases: []
   settitle:
     description: Sets a title
