--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
   </build>
   <repositories>
     <repository>
+	    <id>0_vault-repo</id>
+	    <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+    </repository>
+    <repository>
       <id>1_solinia-releases</id>
       <url>http://play.fallofanempire.com:8081/nexus/content/repositories/releases/</url>
       <snapshots>
@@ -62,10 +66,6 @@
       <releases>
         <enabled>false</enabled>
       </releases>
-    </repository>
-    <repository>
-	    <id>vault-repo</id>
-	    <url>http://nexus.hc.to/content/repositories/pub_releases</url>
     </repository>
     <repository>
         <id>lumine-repo</id>
@@ -151,10 +151,9 @@
 	    <version>1.8.3</version>
 	</dependency>
     <dependency>
-        <groupId>net.milkbowl.vault</groupId>
-        <artifactId>VaultAPI</artifactId>
-        <version>1.7.1</version>
-        <scope>provided</scope>
+      <groupId>net.milkbowl.vault</groupId>
+      <artifactId>Vault</artifactId>
+      <version>1.7.1</version>
     </dependency>
     <dependency>
       <groupId>com.vexsoftware</groupId>
