move lumine down

--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,6 @@
       </releases>
     </repository>
     <repository>
-        <id>lumine-repo</id>
-    	<url>http://mvn.lumine.io/repository/maven-snapshots/</url>
-    </repository>
-    <repository>
       <id>3_dmulloy2-repo</id>
       <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
     </repository>
@@ -105,6 +101,10 @@
       <releases>
         <enabled>true</enabled>
       </releases>
+    </repository>
+    <repository>
+        <id>lumine-repo</id>
+    	<url>zz_http://mvn.lumine.io/repository/maven-snapshots/</url>
     </repository>
   </repositories>
   <distributionManagement>
