--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
     <dependency>
       <groupId>com.vexsoftware</groupId>
       <artifactId>nuvotifier-universal</artifactId>
-      <version>2.5.1</version>
+      <version>2.5.1-20190330.190502-4</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
