--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -19,6 +19,10 @@ commands:
     description: Removes vampirism from a player
     usage: /removevampirism mcname
     aliases: []
+  openspellbook:
+    description: Opens spellbook
+    usage: /openspellbook
+    aliases: []
   follow:
     description: Follows target
     usage: /follow
