--- a/pom.xml
+++ b/pom.xml
@@ -171,5 +171,10 @@
         <version>4.7.0-SNAPSHOT</version>
     	<scope>provided</scope>
 	</dependency>
+	<dependency>
+      <groupId>org.inventivetalent</groupId>
+      <artifactId>glowapi</artifactId>
+      <version>1.4.8-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
