--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
     <dependency>
       <groupId>com.vexsoftware</groupId>
       <artifactId>nuvotifier-universal</artifactId>
-      <version>2.5.1-20190330.190502-4</version>
+      <version>2.5.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
