--- a/pom.xml
+++ b/pom.xml
@@ -171,5 +171,11 @@
         <version>4.7.0-SNAPSHOT</version>
     	<scope>provided</scope>
 	</dependency>
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.11</version>
+	  <scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
