--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -15,6 +15,10 @@ commands:
     description: Commits Solinia3Core State Data
     usage: /commit
     aliases: []
+  sit:
+    description: Toggles sit state
+    usage: /sit
+    aliases: []
   removevampirism:
     description: Removes vampirism from a player
     usage: /removevampirism mcname
