--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
     </snapshotRepository>
   </distributionManagement>
   <dependencies>
+  <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+</dependency>
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
