--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
         <id>zz_lumine-repo</id>
     	<url>http://mvn.lumine.io/repository/maven-snapshots/</url>
     </repository>
+    <repository>
+			<releases>
+			</releases>
+			<snapshots>
+			</snapshots>
+			<id>dynmap-repo</id>
+			<url>http://repo.mikeprimm.com/</url>
+		</repository>
   </repositories>
   <distributionManagement>
     <repository>
@@ -176,5 +184,10 @@
 	  <artifactId>junit</artifactId>
 	  <version>4.11</version>
 	</dependency>
+	<dependency>
+			<groupId>us.dynmap</groupId>
+  		<artifactId>dynmap-api</artifactId>
+  		<version>2.2</version>
+		</dependency>
   </dependencies>
 </project>
