--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>solinia3-core</name>
 	<description>The EverQuest like RPG plugin for Spigot</description>
 	<properties>
-  		<revision>1.14.4-R0.1</revision>
+		<revision>1.14.4-R0.1</revision>
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -95,14 +95,18 @@
 			<id>dynmap-repo</id>
 			<url>http://repo.mikeprimm.com/</url>
 		</repository>
+		<repository>
+			<id>github-Towny</id>
+			<url>https://maven.pkg.github.com/TownyAdvanced/Towny/packages</url>
+		</repository>
 	</repositories>
-<distributionManagement>
-   <repository>
-     <id>github</id>
-     <name>Solinia 3 Core - Github</name>
-     <url>https://maven.pkg.github.com/mixxit/solinia3-core</url>
-   </repository>
-</distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>Solinia 3 Core - Github</name>
+			<url>https://maven.pkg.github.com/mixxit/solinia3-core</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -167,5 +171,12 @@
 			<artifactId>dynmap-api</artifactId>
 			<version>2.2</version>
 		</dependency>
+    <dependency>
+      <groupId>com.palmergames.bukkit.towny</groupId>
+      <artifactId>Towny</artifactId>
+      <version>0.95.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
 	</dependencies>
 </project>
