--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,10 @@
 			<id>dynmap-repo</id>
 			<url>http://repo.mikeprimm.com/</url>
 		</repository>
-		<repository>
+        <repository>
             <id>github-Towny</id>
-		    <url>https://maven.pkg.github.com/TownyAdvanced/Towny</url>
-        </repository>
+            <url>https://maven.pkg.github.com/TownyAdvanced/Towny/packages/</url>
+        </repository> 
 	</repositories>
 	<distributionManagement>
 		<repository>
@@ -167,10 +167,11 @@
 			<artifactId>dynmap-api</artifactId>
 			<version>2.2</version>
 		</dependency>
-		<dependency>
-		  <groupId>com.palmergames.bukkit.towny</groupId>
-		  <artifactId>Towny</artifactId>
-		  <version>0.95.1.0</version>
-		</dependency>
+<dependency>
+      <groupId>com.palmergames.bukkit.towny</groupId>
+      <artifactId>Towny</artifactId>
+      <version>0.95.0.5</version>
+      <scope>provided</scope>
+  	</dependency>
 	</dependencies>
 </project>
